muoni/GraalVM/language/tests/error/InvalidAssignmentInBlock.hn
fn double(x) {
  return 2 * x;
}

fn main() {
  double(2) = 4;
}